# walk-jump

./: .gitignore  README.md  pyproject.toml
walkjump/data/: _datamodule.py
walkjump/hydra_config/callbacks/: model_checkpoint.yaml
walkjump/hydra_config/data/: poas.yaml
