[project]
name = "walkjump"
description = "Walk-jump"
authors = [{name = "Prescient Design"}]
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]

[project.scripts]
walkjump_train = "walkjump.cmdline:train"
walkjump_sample = "walkjump.cmdline:sample"

[tool.poetry.scripts]
train = "walkjump.cmdline:train"
sample = "walkjump.cmdline:sample"

[tool.mypy]
show_error_codes = true
warn_unused_ignores = true
# disallow_any_unimported = true
# check_untyped_defs = true
no_implicit_optional = true
# warn_return_any = true
# disallow_untyped_defs = true
warn_redundant_casts = true
strict_equality = true
warn_unreachable = true
plugins = ["numpy.typing.mypy_plugin"]


[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "sklearn.*",
    "rdkit.*",
    "anarci.*",
    "lightning.*",
    "torchvision.*",
]

ignore_missing_imports = true

[tool.ruff]
line-length = 100
ignore-init-module-imports = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
use_parentheses = true
force_grid_wrap = 0
include_trailing_comma = true
ensure_newline_before_comments = true
known_third_party=["wandb"]

[tool.poetry]
name = "walkjump"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "walkjump"}]

[tool.poetry.dependencies]
python = "^3.10"
biopython = "^1.81"
edlib = "^1.3.9"
hydra-core = "^1.3.2"
jupyter = "^1.0.0"
ipykernel = "^6.23.2"
pandas = "^2.0.2"
pyarrow = "^12.0.1"
scikit-learn = "^1.2.2"
wandb = "^0.15.4"
python-dotenv = "^1.0.0"
pydantic = "^1.10.9"
lightning = "^2.0.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.0"
pip-tools = "^6.13.0"
pre-commit = "^3.3.3"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
